added '_' and '-' as valid symbol for email